cosmos/argocd/base/personal-blog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: "argocd-redirect-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: terra-incognita.blog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: personal-blog
                port:
                  number: 80
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-blog
spec:
  redirectRegex:
    regex: "^https?://blog\\.msmetko\\.xyz.*"
    replacement: "https://terra-incognita.blog/"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog-redirect
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`blog.msmetko.xyz`)
      kind: Rule
      middlewares:
        - name: redirect-blog

      # unused, but required
      services:
        - name: personal-blog
          port: 80
